--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Title</title>
 </head>
 <body>
-<!--    <h1>PDF Example</h1> -->
-<!--    <p>Open a PDF file <a href="./jeanCV.pdf">example</a>.</p> -->
+   <h1>PDF Example</h1>
+   <p>Open a PDF file <a href="./jeanCV.pdf">example</a>.</p>
 
-<embed src="jeanCV.pdf" type="application/pdf"   height="300px" width="100%">
+<!-- <embed src="jeanCV.pdf" type="application/pdf"> -->
 </body>
 </html>
