--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
    <h1>PDF Example</h1>
-   <p>Open a PDF file <a href="./jeanCV.pdf">example</a>.</p>
+   <p>Open a PDF file <a href="./johnCV.pdf">example</a>.</p>
 
 <!-- <embed src="jeanCV.pdf" type="application/pdf"> -->
 </body>
